--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-MONGODB_URI=mongodb+srv://suyash:99dd@cluster0.zs23owd.mongodb.net/
+MONGODB_URI= your URL
 JWT_SECRET=your-super-secret-jwt-key-make-this-very-long-and-random
 JWT_EXPIRE=30d
 BCRYPT_SALT_ROUNDS=12
